--- a/webapp/TargetedMS/lorikeet_0.3/css/lorikeet.css
+++ b/webapp/TargetedMS/lorikeet_0.3/css/lorikeet.css
@@ -57,15 +57,15 @@ div.lorikeet .zoom_in_link {
 
 
 /* THE FOLLOWING STYLES ARE FOR THE TABLE DISPLAYING THE SEQUENCE AND FRAGMENT ION MASS */
-div.lorikeet #ionTable {
+div.lorikeet .ionTable {
     border-collapse:collapse;
 	border-color:#DDDDDD;
 }
-div.lorikeet #ionTable th {
+div.lorikeet .ionTable th {
 	background-color:#BDB76B;
 	border: 1px solid #666666;
 }
-div.lorikeet #ionTable td {
+div.lorikeet .ionTable td {
 	border: 1px solid #666666;
 	text-align: center;
 	background-color:#FFFFFF;
@@ -73,25 +73,25 @@ div.lorikeet #ionTable td {
 }
 
 /* style for a cell containing a residue from the sequence */
-div.lorikeet #ionTable td.seq {
+div.lorikeet .ionTable td.seq {
 	font-weight: bold;
 	background-color:#BDB76B;
 }
 
 /* style for cell containing a modified residue */
-div.lorikeet #ionTable td.modified{
+div.lorikeet .ionTable td.modified{
 	background-color:gold;
 }
 
 /* style for cell containing the fragment indices */
-div.lorikeet #ionTable td.numCell {
+div.lorikeet .ionTable td.numCell {
 	background-color:#F5F5DC;
 	color:#777777;
 }
 
 
 /* style for cell containing a fragment m/z that matches a peak in the scan */
-div.lorikeet #ionTable td.matchIon {
+div.lorikeet .ionTable td.matchIon {
 	font-weight:bold;
 	opacity:0.8;
 	filter: alpha(opacity=80); /*For IE*/
