Spec #22166: QC folder cleanup - convert Levey-Jennings R plot to JS Vis API - use LABKEY.vis.LeveyJenningsPlot JS API - add QC annotations vis D3 after plot render - add QC annotation and data point hover text and mouseover effects - remove R plot code and related items
SVN r35917 |2015-01-09 16:59:01 +0000

--- a/webapp/TargetedMS/css/LeveyJenningsReport.css
+++ b/webapp/TargetedMS/css/LeveyJenningsReport.css
@@ -1,10 +1,9 @@
 
-.precursorGraphHolder {
-    position: relative;
-    width: 100%;
-    height: 300px;
+#tiledPlotPanel {
+    min-height: 50px;
+    width: 900px;
 }
 
-.precursorGraphHolder img {
-    position: absolute;
+.annotation:hover {
+    cursor: pointer;
 }
