Spec #23121: Guide sets for Panorama QC plots, part 2 - allow create guide set mode to be enable/disabled from QC plot input form button - brush selection styling updates and addition of create/cancel button over selection area - remove guide set training range shading in grouped x-axis mode
SVN r37928 |2015-05-11 21:14:51 +0000

--- a/webapp/TargetedMS/css/LeveyJenningsReport.css
+++ b/webapp/TargetedMS/css/LeveyJenningsReport.css
@@ -4,6 +4,22 @@
     width: 900px;
 }
 
-.annotation:hover {
+.annotation:hover, .guideset-svg-button:hover,
+.guideset-svg-button rect:hover,
+.guideset-svg-button text:hover
+{
     cursor: pointer;
+}
+
+.guideset-toolbar-msg {
+    padding: 0 10px 10px 10px;
+    background-color: rgba(20, 204, 201, 0.4) !important;
+}
+
+.guideset-toolbar-msg .x4-box-item {
+    padding-top: 7px;
+    font-weight: bold;
+    font-size: 11px;
+    color: #126495;
+    text-transform: uppercase;
 }
