Spec #23815: Show full chain info in single-document detail view (with click through to other documents/runs)
SVN r39302 |2015-08-20 14:21:59 +0000

--- a/webapp/TargetedMS/css/LinkVersionsDialog.css
+++ b/webapp/TargetedMS/css/LinkVersionsDialog.css
@@ -11,6 +11,14 @@
     font-weight: bold;
 }
 
+.link-version-grid .x4-grid-body {
+    border-top-color: transparent;
+}
+
+.link-version-grid .x4-column-header-inner {
+    background-color: #E0E6EA;
+}
+
 .fa-times {
     cursor: pointer;
 }
