Issue 23482: **Having multiple web parts on Panorama dashboard messes up the UI for QC plots
SVN r40074 |2015-10-14 19:00:04 +0000

--- a/webapp/TargetedMS/css/LeveyJenningsReport.css
+++ b/webapp/TargetedMS/css/LeveyJenningsReport.css
@@ -1,7 +1,7 @@
 
-#tiledPlotPanel {
+.tiledPlotPanel {
     min-height: 50px;
-    width: 900px;
+    min-width: 900px;
 }
 
 .annotation:hover, .guideset-svg-button:hover,
