Spec Issue #28333: Moving Range and Cumulative Sum QC Plots - QC Summary UI update
SVN r47910 |2016-11-28 21:44:19 +0000

--- a/webapp/TargetedMS/css/QCSummary.css
+++ b/webapp/TargetedMS/css/QCSummary.css
@@ -72,3 +72,21 @@ div.hopscotch-bubble .hopscotch-content {
 div.hopscotch-bubble .hopscotch-title {
     padding-bottom: 5px;
 }
+
+.outlier-summary-popup {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+
+.outlier-summary-popup td{
+    border: 1px solid black;
+}
+.outlier-summary-popup th{
+    border: 1px solid black;
+    text-align: center;
+    font-weight: 500;
+}
+
+th.outlier-metric-header{
+    text-align: left;
+}
