Spec Issue #28333: Moving Range and Cumulative Sum QC Plots - QC summary style update
SVN r47913 |2016-11-28 22:21:20 +0000

--- a/webapp/TargetedMS/css/QCSummary.css
+++ b/webapp/TargetedMS/css/QCSummary.css
@@ -80,13 +80,16 @@ div.hopscotch-bubble .hopscotch-title {
 
 .outlier-summary-popup td{
     border: 1px solid black;
+    padding: 3px;
 }
 .outlier-summary-popup th{
     border: 1px solid black;
     text-align: center;
     font-weight: 500;
+    padding: 3px;
 }
 
 th.outlier-metric-header{
     text-align: left;
+    padding: 3px;
 }
