--- a/webapp/TargetedMS/css/QCSummary.css
+++ b/webapp/TargetedMS/css/QCSummary.css
@@ -73,23 +73,6 @@ div.hopscotch-bubble .hopscotch-title {
     padding-bottom: 5px;
 }
 
-.outlier-summary-popup {
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-
-.outlier-summary-popup td{
-    border: 1px solid black;
-    padding: 3px;
-}
-.outlier-summary-popup th{
-    border: 1px solid black;
-    text-align: center;
-    font-weight: 500;
-    padding: 3px;
-}
-
-th.outlier-metric-header{
-    text-align: left;
-    padding: 3px;
+td.outlier-column-header, td.outlier-metric-label {
+    white-space: nowrap;
 }
