Spec #29918: convert QC plot hover to use hopscotch - Show existing details and link to chrom charts
SVN r50919 |2017-05-09 14:49:17 +0000

--- a/webapp/TargetedMS/css/qcTrendPlotReport.css
+++ b/webapp/TargetedMS/css/qcTrendPlotReport.css
@@ -70,3 +70,13 @@
 .tree-node-noicon {
     display: none;
 }
+
+.qc-hover-field-label {
+    width: 75px;
+    font-weight: bold;
+    vertical-align: top;
+}
+
+div.hopscotch-bubble .hopscotch-content td {
+    word-break: break-all;
+}
