Spec #29918: QC plot hover UI for radio input field to set point include/exclude state
SVN r50987 |2017-05-11 20:15:20 +0000

--- a/webapp/TargetedMS/css/qcTrendPlotReport.css
+++ b/webapp/TargetedMS/css/qcTrendPlotReport.css
@@ -71,12 +71,7 @@
     display: none;
 }
 
-.qc-hover-field-label {
-    width: 75px;
+.qc-hover-field .x4-form-item-label {
+    margin-top: 2px;
     font-weight: bold;
-    vertical-align: top;
-}
-
-div.hopscotch-bubble .hopscotch-content td {
-    word-break: break-all;
 }
