Spec #29918: add css to break lines for Sequence string display in QC plot point hover
SVN r51023 |2017-05-15 16:05:50 +0000

--- a/webapp/TargetedMS/css/qcTrendPlotReport.css
+++ b/webapp/TargetedMS/css/qcTrendPlotReport.css
@@ -75,3 +75,7 @@
     margin-top: 2px;
     font-weight: bold;
 }
+
+.hopscotch-bubble-container .qc-hover-value-break {
+    word-break: break-all;
+}
