Spec #29918: QC plot support for paging if > 50 precursors in the folder - fully functional, but hidden prev/next buttons for now until we are sure we have time to buddy test this - include an automated test case for second page
SVN r51196 |2017-05-22 15:48:04 +0000

--- a/webapp/TargetedMS/css/qcTrendPlotReport.css
+++ b/webapp/TargetedMS/css/qcTrendPlotReport.css
@@ -76,6 +76,23 @@
     font-weight: bold;
 }
 
+.qc-paging-prev, .qc-paging-next {
+    font-weight: bold;
+    font-size: 18px;
+    padding: 0 8px;
+    border: solid #c0c0c0 1px;
+}
+.qc-paging-prev {
+    border-right-width: 0;
+}
+.qc-paging-icon-disabled {
+    color: #c0c0c0;
+}
+.qc-paging-icon-enabled:hover {
+    background-color: rgba(20, 204, 201, 0.4);
+    cursor: pointer;
+}
+
 .hopscotch-bubble-container .qc-hover-value-break {
     word-break: break-all;
 }
