Spec #30921: TargetedMS assay updates for new UX - Updates/fixes for QC Plots webpart - Issue 31218: **Panorama QC plots restrict to 900px wide in new UX
SVN r53272 |2017-08-24 13:59:49 +0000

--- a/webapp/TargetedMS/css/qcTrendPlotReport.css
+++ b/webapp/TargetedMS/css/qcTrendPlotReport.css
@@ -96,3 +96,13 @@
 .hopscotch-bubble-container .qc-hover-value-break {
     word-break: break-all;
 }
+
+.qc-trend-plot-panel .x4-panel-header,
+.qc-trend-plot-panel .x4-toolbar-footer {
+    background: #EEEEEE;
+}
+
+.qc-trend-plot-panel .x4-panel-header-text-container-default {
+    font-size: 12px;
+    color: #000000;
+}
