--- a/webapp/TargetedMS/css/FiguresOfMerit.css
+++ b/webapp/TargetedMS/css/FiguresOfMerit.css
@@ -30,11 +30,35 @@
     cursor: pointer;
 }
 
+.fom-table{
+    border: 1px solid lightgray !important;
+}
+
+.fom-table thead{
+    border-bottom: 3px solid lightgray;
+}
+
 .fom-table td.fom-number{
     text-align: right;
     white-space:nowrap;
+    border: 1px solid lightgray !important;
+}
+
+.fom-table td.shaded{
+    background-color: #f9f9f9;
+    border-top: 1px solid lightgray !important;
+    border-bottom: 1px solid lightgray;
+}
+
+.fom-table td.left{
+    border-left: 1px solid lightgray;
+}
+
+.fom-table td.right{
+    border-right: 1px solid lightgray;
 }
 
 .fom-table td.fom-label{
     white-space:nowrap;
+    width: 10%;
 }
