Spec #31940: updates per code review - group subgroup sections within a panel-portal - move export to excel icon next to the Statistics section header - move error text about missing annotations to below the other header items - TargetedMSController update to use PKForm instead of getting request params separately - move getReplicateSubgroupNames to TargetedMSManager
SVN r57083 |2018-03-21 14:58:18 +0000

--- a/webapp/TargetedMS/css/Pharmacokinetics.css
+++ b/webapp/TargetedMS/css/Pharmacokinetics.css
@@ -5,8 +5,9 @@
 
 .pk-table thead td,
 .pk-table-stats thead td {
-    padding: 0 2px;
+    padding: 5px;
     border : solid 1px lightgray !important;
+    vertical-align: top;
 }
 
 .pk-table tr td,
@@ -23,4 +24,9 @@
 .pk-table-stat{
     width: 100px;
     text-align: right;
+}
+
+.targetedms-fom .export-icon {
+    padding-top: 4px;
+    left: 150px;
 }
