Spec 34238: Add blanks and LOD to FOM.
SVN r58863 |2018-06-25 04:11:01 +0000

--- a/webapp/TargetedMS/css/FiguresOfMerit.css
+++ b/webapp/TargetedMS/css/FiguresOfMerit.css
@@ -61,3 +61,14 @@
     white-space:nowrap;
     width: 10%;
 }
+
+.fom-table.blanks,
+.fom-table.summary{
+    width: 400px;
+}
+
+.stats-inline{
+    float:left;
+    height:100%;
+    margin-right: 10px;
+}
