Item 6010: Ability to add custom metric
* Item 6010: AddNewMetric UI

* Item 6010: Save new metric to database with filtering and validations

* Item 6010: Edit custom metric

* Itsm 6010: Add metric type in AddMetric UI and lock editing for the existing metrics

* Item 6010: add delete metric button

* Item 6012: automated test and code review changes

* Item 6010: code review changes

* Item 6010: Validate selected query

* Item 6010: consolidating setVisible call after the for loop

* Making both molecule scoped and run scoped metrics editable

* Issue 38216: sort list of queries alphabetically

* Issue 38217: QC metrics configuration drop down doesn't populate during edit until you re-select a schema

* Adding test query for test custom metric

* Fixing combox selections in automated test failures

* Adding configure Metric UI helper page

* Adding metricProperties Enum

* Removing reference of PanoramPremiumModules code in targetedms

* left over file in last commit

* Fixing sqlserver failure

--- a/resources/views/configureQCMetric.html
+++ b/resources/views/configureQCMetric.html
@@ -23,12 +23,13 @@
             jQuery.each(qcMetrics, function (index, row) {
                 var rowClass = index % 2 === 1 ? "labkey-row" : "labkey-alternate-row";
                 configRows.push({metric: row.id, name: row.name, Enabled: row.Enabled, Inserted: row.Inserted});
+                var editLock = row.Container === LABKEY.container.id;
 
                 qcMetricsTable += '<tr class="' + rowClass + '">';
 
                 qcMetricsTable += '<td>' + '<input type="checkbox" ' + (row.Enabled ? checked="checked" : '') + ' name=\"' + LABKEY.Utils.encodeHtml(row.name) + '\" id=\"' +  "checkbox-"+ row.id  +  '\"></td>';
 
-                qcMetricsTable += '<td>' + LABKEY.Utils.encodeHtml(row.name) + '</td>';
+                qcMetricsTable += '<td>' + (editLock ? '<a id="editLink" href="#">' : '' ) + LABKEY.Utils.encodeHtml(row.name) + '</td>' + (editLock ? '</a>' : '' );
                 qcMetricsTable += '<td>' + (row.PrecursorScoped ? 'Precursor' : 'Run') + '</td>' +
                         '</tr>';
 
@@ -36,10 +37,41 @@
 
             qcMetricsTable += '</table>' + '<br>' +
                     '<button type="button" class="labkey-button primary" onclick="LABKEY.internal.ConfigureQCMetrics.save()" style="margin-right: 20px;">Save</button>' +
-                    '<button type="button" class="labkey-button" onclick="LABKEY.internal.ConfigureQCMetrics.resetQCMetrics()">Cancel</button>' +
+                    '<button type="button" class="labkey-button" onclick="LABKEY.internal.ConfigureQCMetrics.resetQCMetrics()" style="margin-right: 20px;">Cancel</button>' +
+                    '<button type="button" class="labkey-button" onclick="LABKEY.internal.ConfigureQCMetrics.addNewMetric()">Add New Metric</button>' +
                     '</form>';
 
             jQuery('#qcMetricsTable').html(qcMetricsTable);
+
+            jQuery('#editLink').click(function (e) {
+                e.preventDefault();
+                editMetric(jQuery('#editLink').text());
+                return false;
+            })
+        }
+
+        function editMetric(metricName) {
+            var clickedQcMetricConfig = {};
+            jQuery.each(qcMetrics, function (index, row) {
+                if (row.name === metricName) {
+                    clickedQcMetricConfig = row;
+                }
+            });
+
+            LABKEY.Query.getSchemas({
+                scope: this,
+                containerPath: LABKEY.container.id,
+                success: function (schemasInfo) {
+                    Ext4.create('Panorama.Window.AddCustomMetricWindow', {
+                        parent: this,
+                        height: Ext4.max([Ext4.getBody().getHeight() * 0.3, 350]),
+                        width: Ext4.max([Ext4.getBody().getWidth() * 0.2, 450]),
+                        metric: clickedQcMetricConfig,
+                        operation: 'update',
+                        schemas: schemasInfo.schemas
+                    }).show();
+                }
+            });
         }
 
         function getReturnURL() {
@@ -80,6 +112,25 @@
             resetQCMetrics: function(){
                 window.location = getReturnURL();
             },
+
+            addNewMetric: function() {
+                Ext4.onReady(function(){
+                    LABKEY.Query.getSchemas({
+                        scope: this,
+                        containerPath: LABKEY.container.id,
+                        success:  function(schemasInfo) {
+                            Ext4.create('Panorama.Window.AddCustomMetricWindow', {
+                                parent: this,
+                                height: Ext4.max([Ext4.getBody().getHeight() * 0.3, 350]),
+                                width: Ext4.max([Ext4.getBody().getWidth() * 0.2, 450]),
+                                schemas: schemasInfo.schemas,
+                                operation: 'insert'
+                            }).show();
+                        }
+                    });
+                });
+            },
+
             save: function () {
                 var recordsToInsert = [];
                 var recordsToUpdate = [];
