--- a/webapp/TargetedMS/css/qcTrendPlotReport.css
+++ b/webapp/TargetedMS/css/qcTrendPlotReport.css
@@ -106,3 +106,11 @@
     font-size: 12px;
     color: #000000;
 }
+
+.expDateRange-toolbar-msg {
+    background-color: #69a3b2 !important;
+    padding: 7px 10px 10px;
+    font-weight: normal;
+    font-family: 'Roboto-Bold', 'Arial-Bold', 'Helvetica-Bold', sans-serif;
+    font-size: 11px;
+}
