--- a/webapp/TargetedMS/css/qcTrendPlotReport.css
+++ b/webapp/TargetedMS/css/qcTrendPlotReport.css
@@ -108,9 +108,9 @@
 }
 
 .expDateRange-toolbar-msg {
-    background-color: #69a3b2 !important;
+    background-color: rgb(173, 192, 218) !important;
     padding: 7px 10px 10px;
     font-weight: normal;
     font-family: 'Roboto-Bold', 'Arial-Bold', 'Helvetica-Bold', sans-serif;
-    font-size: 11px;
+    font-size: 14px;
 }
