Issue 45050: Improve sample and replicate name handling in Panorama

--- a/webapp/TargetedMS/css/QCSummary.css
+++ b/webapp/TargetedMS/css/QCSummary.css
@@ -59,6 +59,8 @@
 
 .sample-file-field-label {
     font-weight: bold;
+    padding-right: 1em;
+    vertical-align: top;
 }
 
 .sample-file-metric-list {
